; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netpfil/ipfw/extr_dn_sched_prio.c_prio_enqueue.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netpfil/ipfw/extr_dn_sched_prio.c_prio_enqueue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dn_sch_inst = type { i32 }
%struct.dn_queue = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32* }
%struct.mbuf = type { i32 }
%struct.prio_si = type { %struct.dn_queue**, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dn_sch_inst*, %struct.dn_queue*, %struct.mbuf*)* @prio_enqueue to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @prio_enqueue(%struct.dn_sch_inst* %0, %struct.dn_queue* %1, %struct.mbuf* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.dn_sch_inst*, align 8
  %6 = alloca %struct.dn_queue*, align 8
  %7 = alloca %struct.mbuf*, align 8
  %8 = alloca %struct.prio_si*, align 8
  %9 = alloca i32, align 4
  store %struct.dn_sch_inst* %0, %struct.dn_sch_inst** %5, align 8
  store %struct.dn_queue* %1, %struct.dn_queue** %6, align 8
  store %struct.mbuf* %2, %struct.mbuf** %7, align 8
  %10 = load %struct.dn_sch_inst*, %struct.dn_sch_inst** %5, align 8
  %11 = getelementptr inbounds %struct.dn_sch_inst, %struct.dn_sch_inst* %10, i64 1
  %12 = bitcast %struct.dn_sch_inst* %11 to %struct.prio_si*
  store %struct.prio_si* %12, %struct.prio_si** %8, align 8
  %13 = load %struct.dn_queue*, %struct.dn_queue** %6, align 8
  %14 = getelementptr inbounds %struct.dn_queue, %struct.dn_queue* %13, i32 0, i32 0
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 0
  %18 = load i32*, i32** %17, align 8
  %19 = getelementptr inbounds i32, i32* %18, i64 0
  %20 = load i32, i32* %19, align 4
  store i32 %20, i32* %9, align 4
  %21 = load i32, i32* %9, align 4
  %22 = load %struct.prio_si*, %struct.prio_si** %8, align 8
  %23 = getelementptr inbounds %struct.prio_si, %struct.prio_si* %22, i32 0, i32 1
  %24 = call i64 @test_bit(i32 %21, i32* %23)
  %25 = icmp eq i64 %24, 0
  br i1 %25, label %26, label %38

26:                                               ; preds = %3
  %27 = load i32, i32* %9, align 4
  %28 = load %struct.prio_si*, %struct.prio_si** %8, align 8
  %29 = getelementptr inbounds %struct.prio_si, %struct.prio_si* %28, i32 0, i32 1
  %30 = call i32 @__set_bit(i32 %27, i32* %29)
  %31 = load %struct.dn_queue*, %struct.dn_queue** %6, align 8
  %32 = load %struct.prio_si*, %struct.prio_si** %8, align 8
  %33 = getelementptr inbounds %struct.prio_si, %struct.prio_si* %32, i32 0, i32 0
  %34 = load %struct.dn_queue**, %struct.dn_queue*** %33, align 8
  %35 = load i32, i32* %9, align 4
  %36 = sext i32 %35 to i64
  %37 = getelementptr inbounds %struct.dn_queue*, %struct.dn_queue** %34, i64 %36
  store %struct.dn_queue* %31, %struct.dn_queue** %37, align 8
  br label %46

38:                                               ; preds = %3
  %39 = load %struct.prio_si*, %struct.prio_si** %8, align 8
  %40 = getelementptr inbounds %struct.prio_si, %struct.prio_si* %39, i32 0, i32 0
  %41 = load %struct.dn_queue**, %struct.dn_queue*** %40, align 8
  %42 = load i32, i32* %9, align 4
  %43 = sext i32 %42 to i64
  %44 = getelementptr inbounds %struct.dn_queue*, %struct.dn_queue** %41, i64 %43
  %45 = load %struct.dn_queue*, %struct.dn_queue** %44, align 8
  store %struct.dn_queue* %45, %struct.dn_queue** %6, align 8
  br label %46

46:                                               ; preds = %38, %26
  %47 = load %struct.dn_queue*, %struct.dn_queue** %6, align 8
  %48 = load %struct.mbuf*, %struct.mbuf** %7, align 8
  %49 = call i64 @dn_enqueue(%struct.dn_queue* %47, %struct.mbuf* %48, i32 0)
  %50 = icmp ne i64 %49, 0
  br i1 %50, label %51, label %52

51:                                               ; preds = %46
  store i32 1, i32* %4, align 4
  br label %53

52:                                               ; preds = %46
  store i32 0, i32* %4, align 4
  br label %53

53:                                               ; preds = %52, %51
  %54 = load i32, i32* %4, align 4
  ret i32 %54
}

declare dso_local i64 @test_bit(i32, i32*) #1

declare dso_local i32 @__set_bit(i32, i32*) #1

declare dso_local i64 @dn_enqueue(%struct.dn_queue*, %struct.mbuf*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
